[package]
name = "ark"
description = "Rust library to implement reading and writing unix (ar) archives."
version = "0.1.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
readme = "README.md"
repository = "https://github.com/stpettersens/ark"
homepage = "https://github.com/stpettersens/ark"
documentation = "http://docs.rs/ark"
license = "GPL-3.0/MIT"
keywords = ["unix", "ar", "archive", "implementation", "library"]
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]

[dependencies]
filetime = "0.1.10"
